@@ -301,9 +301,18 @@ class WC_REST_Payments_Webhook_Controller extends WC_Payments_REST_Controller {
 		// Get an updated set of order properties to avoid race conditions when the server sends the paid webhook before we've finished processing the original payment request.
 		$order->get_data_store()->read( $order );
 
-		if ( ! $order->has_status( [ 'processing', 'completed' ] ) ) {
-			$order->payment_complete();
+		if ( $order->has_status( [ 'processing', 'completed' ] ) ) {
+			return;
 		}
+
+		// Prevent parallel order processing attempts.
+		if ( WC_Payments_Utils::is_order_locked( $order, $intent_id ) ) {
+			return;
+		}
+
+		WC_Payments_Utils::lock_order_payment( $order, $intent_id );
+		$order->payment_complete();
+		WC_Payments_Utils::unlock_order_payment( $order );
 	}
 
 	/**
