@@ -5,6 +5,7 @@
 * Add - JS error boundaries to admin screens.
 * Update - Remove task from the overview list for setting up multiple currencies.
 * Update - Return to task "Set up payments" after finishing KYC from WC-Admin.
+* Fix - Improve race condition checks to prevent duplicate order status changes.
 * Fix - Explicit currency formatting in customer-facing emails.
 
 = 3.4.0 - 2021-12-08 =
